--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     background-color: black;
     width: 100%;
     height: 100%;
-    background-image: url('/images/pic1.jpg');
+    background-image: url('images/pic1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
